# Thought2Text-16Ch-BCI

./: .gitignore  LICENSE  NOTICE.md  README.md  pyproject.toml  requirements.txt
docs/: BENCHMARK.md  RESULTS.md
scripts/: benchmark_edge.py  compress_weights.py  export_edge.py  select_channels.py
tests/: test_adapter.py  test_bundle.py
thought2text_edge/: __init__.py  adapter.py  bundle.py  channelnet.py
weights/: MODEL_CARD.md  SHA256SUMS  adapter.pth  adapter_fp16.pth  config.json
